Harden legacy Android release compatibility